fixed spacing in the navbar for icons and links for phone version

--- a/experience.css
+++ b/experience.css
@@ -383,7 +383,7 @@ html {
         display: flex;
         flex-direction: row;
         align-items: center;
-        gap: 15px;
+        gap: 10px;
         margin: 0;
         position: static;
         /* remove any absolute positioning */
@@ -403,6 +403,7 @@ html {
     }
 
     .link-projects {
+        margin-right: 10px;
         font-size: 15px;
         /* Adjust font size for smaller screens */
         transform: rotate(0deg);
